fixing graph city version, adding aco algo and diving into pages
